# nixops-wg-links

./: .gitignore  README.md  default.nix  overrides.nix  pyproject.toml  release.nix  setup.cfg  shell.nix
.github/workflows/: ci.yaml
examples/: aws-wg-advanced.nix  aws-wg-simple.nix  wg-lib.nix
nix/: sources.json
nixops_wg_links/: __init__.py  lib.py  plugin.py
nixops_wg_links/nix/: default.nix  options.nix  wg-keypair.nix
nixops_wg_links/resources/: __init__.py  wg_keypair.py
