[tool.poetry]
name = "nixops_wg_links"
version = "1.0"
description = "Wireguard links support for NixOps"
authors = ["John Lotoski <john.lotoski@iohk.io>"]
license = "MIT"
include = [ "nixops_wg_links/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.7"
nixops = {git = "https://github.com/NixOS/nixops.git"}

[tool.poetry.plugins."nixops"]
wg_links = "nixops_wg_links.plugin"

[tool.poetry.dev-dependencies]
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
